src/test/resources/repos/invalid-binary-desc-subjects/408/170/a35/408170a3501db93228c14e2e84a51c2df6a03ac1063e85b6ec6ceee89deb527b/v1/inventory.json.sha512
45add1e5d6307c3f1a86c33e61e7b27d9a194bc8ee8be02fbebad410c36f38dd573178b189f8204cc6060c19445fa97b15be04e334bea0cc579fb4bb0df36d16	inventory.json